fixed spacing of about me picture

--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -228,9 +228,9 @@ ul.social-network {
 }
 
 .Item_Content img{
-  width: 350px;
-  height: 600px;
-  margin-top: 30px;
+  width: 100%;
+  height: auto;
+  margin: 70px 0px 140px 0px;
 }
 
 #item_header {
@@ -286,8 +286,8 @@ hr.light-100 {
   }
 
   .Item_Content img {
-    height: 450px;
-    width: auto;
+    height: 100%;
+    width: 100%;
   }
 }
 
@@ -304,11 +304,7 @@ hr.light-100 {
   .Item_wrapper {
     width: 90%;
   }
-
-  .Item_Content img {
-    height: 450px;
-    width: auto;
-  }
+}
 
 }
 @media (max-width: 576px) {
